samples/_failures_safe/1761511109_05b8a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0321b202.c: In function ‘main’:
./samples/SAFE/__tmp_0321b202.c:165:9: error: expected expression at end of input
  165 |         if (
      |         ^~
./samples/SAFE/__tmp_0321b202.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0321b202.c:165:9: error: expected declaration or statement at end of input
